# sfmlgame

./: .gitignore  .gitmodules  CMakeLists.txt  sfmlgame.kdev4
src/: assetmanager.cpp  assetmanager.hpp  engine.cpp  engine.hpp  entities.hpp  entity.cpp  entity.hpp  fmt  geometry.cpp  geometry.hpp  geometry.tpp  input.cpp  input.hpp  main.cpp  music.cpp  music.hpp  renderer.cpp  renderer.hpp  sound.cpp  sound.hpp  states.hpp  tile.cpp  tile.hpp  tileproperties.cpp  tileproperties.hpp  tiletypes.cpp  tiletypes.hpp  types.hpp  util.cpp  util.hpp  world.cpp  world.hpp
src/entities/: baseentity.cpp  baseentity.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  entityinfo.hpp  goalcard.cpp  goalcard.hpp  goomba.cpp  goomba.hpp  player.cpp  player.hpp  renderentity.cpp  renderentity.hpp
src/geometry/: matrix.cpp  matrix.hpp  rect.cpp  rect.hpp  vec2.cpp  vec2.hpp  vector2.cpp  vector2.hpp
src/states/: basegame.cpp  basegame.hpp  basestate.cpp  basestate.hpp  gameplay.cpp  gameplay.hpp  gamestate.cpp  gamestate.hpp  intro.cpp  intro.hpp  overworld.cpp  overworld.hpp  pausemenu.cpp  pausemenu.hpp
src/util/: file.cpp  file.hpp  math-template.hpp  math.hpp
